# goit-pythonweb-hw-10

./: .env.example  README.md  main.py  pyproject.toml
migrations/: env.py
src/: schemas.py
src/api/: contacts.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/services/: contacts.py
